--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       //"moduleResolution": "node",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
+       "skipLibCheck": true
       // "ignoreDeprecations": "6.0"
   },
    "include": ["src"]
